# ai-tracking

./: .gitignore  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  METHODOLOGY.md  README.md
.github/ISSUE_TEMPLATE/: company-suggestion.yml
.github/workflows/: backfill.yml  build.yml  ci.yml  scrape.yml
analysis/: README.md  pyproject.toml
analysis/src/analysis/: __init__.py  aggregate.py  classify.py  companies.py  diff.py  language.py  llm.py  main.py  models.py  paragraphs.py  score.py
analysis/src/analysis/rules/: keywords.yml
analysis/tests/: conftest.py  test_aggregate.py  test_classify.py  test_diff.py  test_enrich.py  test_language.py  test_llm.py  test_paragraphs.py  test_score.py
data/processed/: changes.json  companies.json  timeline.json
data/processed/changes/: adobe-ai_terms-2024-04-11-2024-05-13.json  adobe-ai_terms-2024-06-03-2024-07-09.json  adobe-ai_terms-2025-03-07-2025-04-13.json  adobe-ai_terms-2025-04-13-2025-05-09.json  adobe-ai_terms-2026-04-19-2026-05-13.json  adobe-privacy_policy-2024-06-01-2024-07-01.json  adobe-privacy_policy-2025-01-01-2025-02-01.json  adobe-privacy_policy-2025-05-01-2025-06-01.json  adobe-privacy_policy-2025-06-01-2025-07-01.json  amazon-privacy_policy-2025-01-15-2025-02-26.json  amazon-privacy_policy-2025-06-24-2025-07-04.json  amazon-privacy_policy-2025-12-08-2026-02-20.json  amazon-privacy_policy-aws-2024-06-01-2024-07-01.json  amazon-privacy_policy-aws-2024-10-01-2024-11-02.json  amazon-privacy_policy-aws-2025-02-01-2025-03-01.json  amazon-privacy_policy-aws-2025-05-02-2025-06-01.json  amazon-privacy_policy-aws-2025-06-01-2025-07-03.json  amazon-privacy_policy-aws-2025-09-02-2025-10-01.json  amazon-privacy_policy-aws-2025-10-01-2025-11-01.json  amazon-privacy_policy-aws-2026-05-17-2026-05-18.json  anthropic-privacy_policy-2024-05-01-2024-06-01.json  anthropic-privacy_policy-2024-06-01-2024-07-01.json  anthropic-privacy_policy-2024-08-01-2024-09-01.json  anthropic-privacy_policy-2024-11-04-2024-12-01.json  anthropic-privacy_policy-2024-12-01-2025-01-01.json  anthropic-privacy_policy-2025-02-01-2025-03-02.json  anthropic-privacy_policy-2025-08-01-2025-09-01.json  anthropic-privacy_policy-2025-09-01-2025-10-01.json  anthropic-privacy_policy-2025-10-01-2025-11-01.json  anthropic-privacy_policy-2025-11-01-2025-12-04.json  (+190 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: CNAME
frontend/scripts/: copy-data.mjs  generate-feed.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: data.ts  (+1 more)
scrapers/: README.md  pyproject.toml
scrapers/src/scrapers/: __init__.py  config.py  http.py  main.py  news.py  policies.py  regulatory.py  sec.py  wayback.py
scrapers/tests/: test_config.py  test_main.py  test_news.py  test_policies.py  test_regulatory.py  test_sec.py  test_wayback.py
scrapers/tests/fixtures/: cdx_response.json  edgar_10k.html  edgar_submissions.json  ftc_rss.xml  gdelt_response.json  sample_policy.html
(+2601 files in other folders)
