[project]
name = "analysis"
version = "0.1.0"
description = "AI Privacy Tracker analysis pipeline"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis"]

[tool.hatch.build.targets.wheel.force-include]
"src/analysis/rules/keywords.yml" = "analysis/rules/keywords.yml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative starter set — extend (e.g. add "I", "UP", "B") when ready.
select = ["E4", "E7", "E9", "F"]
