[project]
name = "scrapers"
version = "0.1.0"
description = "AI Privacy Tracker scrapers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative starter set — extend (e.g. add "I", "UP", "B") when ready.
select = ["E4", "E7", "E9", "F"]
